--- a/Estrutura do Projeto/Relátorio.tex
+++ b/Estrutura do Projeto/Relátorio.tex
@@ -33,7 +33,7 @@
 		
 		\Huge \textbf{Relatório de Estágio Curricular em} \\
 		\vspace{0.5cm}
-		\LARGE \textit{(área ou setor do estágio)} \\
+		\LARGE \textit{Superintendência Administrativa de orçamento, finanças e contabilidade - SAPOFC.} \\
 		\vfill
 		
 		\Large Sérgio Ricardo Vieira Torres Silva \\
@@ -46,8 +46,8 @@
 		\textbf{UNIVERSIDADE FEDERAL DE ALAGOAS} 
 		\textbf{PRÓ-REITORIA DE GRADUAÇÃO} 
 		\vspace{1cm}
-		\textbf{Relatório de Estágio Curricular em} 
-		\textit{(área ou setor do estágio)}
+		\textbf{Relatório de Estágio Curricular em} \\
+		\textit{Superintendência Administrativa de orçamento, finanças e contabilidade - SAPOFC.}
 	\end{center}
 	
 	\vspace{1cm}
@@ -82,7 +82,25 @@
 	% 1. INTRODUÇÃO
 	\section{Introdução}
 	
-	Descreva o local de estágio, o público atendido, os serviços oferecidos, produtos elaborados, tipos de materiais que compõem o acervo, organização do espaço físico, equipe e atividades exercidas pelos membros.
+\hspace*{1,5cm}O estágio é realizado na Secretaria de Estado do Turismo – SETUR/AL, localizada na
+Rua Celso Piatti, No 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria está situada
+no interior do Centro Cultural e de Exposições Ruth Cardoso. Ademais, a estrutura da secretaria
+se divide em: órgão colegiado, gestão finalística e gestão estratégica. Em relação à gestão
+estratégica, o setor de Superintendência Administrativa, de Planejamento, Orçamento, Finanças
+e Contabilidade (SAPOFC) está subordinado à Secretaria Executiva de Gestão Interna. Além
+disso, esse setor é ocupado pelos seguintes cargos: gerente executivo administrativo, assessora
+técnica de aquisição, assessor técnico de frota, patrimônio, almoxarifado e de controle de
+consumo interno, gerente executivo de planejamento, orçamento, finanças e contabilidade,
+supervisora de planejamento, orçamento, finanças e contabilidade, assessora técnica de
+planejamento e orçamento, assessora técnica de finanças e contabilidade, gerente executiva de
+valorização de pessoas, assessora técnica, assessora especial, gerente executivo de tecnologia
+da informação e assessora técnica de infraestrutura de tecnologia da informação e suporte. Neste
+setor – SAPOFC – onde todas as atividades listadas no plano de atividade executada por mim,
+o público atendido são os próprios colaboradores de outros setores em busca de sanar as suas
+dúvidas. Além disso, os serviços oferecidos estão diretamente ligados aos produtos elaborados.
+Nesse sentido, os produtos elaborados são construções de painéis de indicadores das principais
+despesas da secretaria, que servem para esclarecer dúvidas referente a empenho, liquidação e
+pagamento.
 	
 	% 2. ATIVIDADES DESENVOLVIDAS
 	\section{Atividades Desenvolvidas}
