--- a/Estrutura do Projeto/Relátorio.tex
+++ b/Estrutura do Projeto/Relátorio.tex
@@ -82,25 +82,7 @@
 	% 1. INTRODUÇÃO
 	\section{Introdução}
 	
-\hspace*{1,5cm}O estágio é realizado na Secretaria de Estado do Turismo – SETUR/AL, localizada na
-Rua Celso Piatti, No 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria está situada
-no interior do Centro Cultural e de Exposições Ruth Cardoso. Ademais, a estrutura da secretaria
-se divide em: órgão colegiado, gestão finalística e gestão estratégica. Em relação à gestão
-estratégica, o setor de Superintendência Administrativa, de Planejamento, Orçamento, Finanças
-e Contabilidade (SAPOFC) está subordinado à Secretaria Executiva de Gestão Interna. Além
-disso, esse setor é ocupado pelos seguintes cargos: gerente executivo administrativo, assessora
-técnica de aquisição, assessor técnico de frota, patrimônio, almoxarifado e de controle de
-consumo interno, gerente executivo de planejamento, orçamento, finanças e contabilidade,
-supervisora de planejamento, orçamento, finanças e contabilidade, assessora técnica de
-planejamento e orçamento, assessora técnica de finanças e contabilidade, gerente executiva de
-valorização de pessoas, assessora técnica, assessora especial, gerente executivo de tecnologia
-da informação e assessora técnica de infraestrutura de tecnologia da informação e suporte. Neste
-setor – SAPOFC – onde todas as atividades listadas no plano de atividade executada por mim,
-o público atendido são os próprios colaboradores de outros setores em busca de sanar as suas
-dúvidas. Além disso, os serviços oferecidos estão diretamente ligados aos produtos elaborados.
-Nesse sentido, os produtos elaborados são construções de painéis de indicadores das principais
-despesas da secretaria, que servem para esclarecer dúvidas referente a empenho, liquidação e
-pagamento.
+\hspace*{1,5cm}
 	
 	% 2. ATIVIDADES DESENVOLVIDAS
 	\section{Atividades Desenvolvidas}
