--- a/Estrutura do Projeto/Relátorio.tex
+++ b/Estrutura do Projeto/Relátorio.tex
@@ -1,6 +1,5 @@
+%carregamento dos pacotes para a codificação, fontes e personalização do relátorio
 \documentclass[12pt,a4paper]{article}
-
-% Pacotes necessários
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[brazil]{babel}
@@ -20,10 +19,10 @@
 \setlength{\parindent}{1.25cm}
 \onehalfspacing
 
-% Início do documento
+% Início do relátorio
 \begin{document}
 	
-	% CAPA
+	% capa
 	\begin{titlepage}
 		\centering
 		\large
@@ -40,7 +39,7 @@
 		\vspace{1.5cm}
 	\end{titlepage}
 	
-	% FOLHA DE IDENTIFICAÇÃO
+	% folha de identificação
 	\thispagestyle{empty}
 	\begin{center}
 		\textbf{UNIVERSIDADE FEDERAL DE ALAGOAS} 
@@ -79,12 +78,12 @@
 	
 
 	
-	% 1. INTRODUÇÃO
+	% 1. introduçao
 	\section{Introdução}
 	
 \hspace*{1,5cm}
 	
-	% 2. ATIVIDADES DESENVOLVIDAS
+	% 2. atividades desenvolvidas
 	\section{Atividades Desenvolvidas}
 	
 \hspace*{1,5cm}As atividades desenvolvidas, além de auxiliar o superintendente no planejamento da 
@@ -110,7 +109,7 @@ detalhadas sobre o uso do SIAFE/AL, aconselhamento para aprimorar as habilidades
 Power BI e Excel, além de apoio na resolução de problemas encontrados durante a criação de 
 relatórios e painéis de indicadores das despesas. Posto isto, faz-se necessária a apresentação do 
 material colocado à disposição para estudo.
-	% 3. SUPORTE TEÓRICO PARA A SOLUÇÃO DE PROBLEMAS
+	% 3. Suporte Teórico para a Solução de Problemas
 	\section{Suporte Teórico para a Solução de Problemas}
 \hspace*{1,5cm}A bibliográfica utilizada – \texttt{Decreto n° 98.054, de 4 de julho de 2024}. Dispõe sobre o 
 Monitoramento e Avaliação do Plano Plurianual (PPA) - MAPPA e a Política Estadual de 
@@ -125,7 +124,7 @@ Além disso, a portaria esclarece como é a estrutura da natureza da despesa a s
 execução orçamentária. Sendo assim, elas servem para esclarecer algumas dúvidas referente a 
 construção do relatório no que tange a estrutura da natureza da despesa. %\texttt{abntex2cite}).
 	
-	% 4. CONCLUSÃO
+	% 4. conclusão
 	\section{Conclusão}
 \hspace*{1,5cm}O ambiente de trabalho na Secretaria de Estado do Turismo – SETUR/AL, além de ser 
 amigável e agradável, proporciona não apenas aprendizado técnico, mas também oportunidades 
@@ -147,7 +146,7 @@ pela oportunidade de estabelecer conexões com os colegas de profissão. Essa ex
 sendo fundamental para minha formação e contribuirá de maneira significativamente para 
 minha atuação futura na área.
 	
-	% 5. ANEXOS
+	% 5. anexos
 	\section{Anexos}
 	
 	\begin{itemize}
@@ -155,7 +154,7 @@ minha atuação futura na área.
 		\item Termo de compromisso assinado
 	\end{itemize}
 	
-	% 6. DE ACORDO
+	% 6. de acordo
 	\vspace{2cm}
 	\noindent \textbf{De Acordo:}
 	
