--- a/Estrutura do Projeto/Relátorio.tex
+++ b/Estrutura do Projeto/Relátorio.tex
@@ -30,9 +30,9 @@
 		\textbf{PRÓ-REITORIA DE GRADUAÇÃO} \\
 		\vfill
 		
-		\Huge \textbf{Relatório de Estágio Curricular em} \\
+		\Huge \textbf{Relatório de Estágio Curricular na} \\
 		\vspace{0.5cm}
-		\LARGE \textit{Superintendência Administrativa de orçamento, finanças e contabilidade - SAPOFC.} \\
+		\LARGE \textit{Superintendência Administrativa, Planejamento, Orçamento, Finanças e Contabilidade - SAPOFC.} \\
 		\vfill
 		
 		\Large Sérgio Ricardo Vieira Torres Silva \\
