--- a/Estrutura do Projeto/Relátorio.tex
+++ b/Estrutura do Projeto/Relátorio.tex
@@ -30,7 +30,7 @@
 		\textbf{PRÓ-REITORIA DE GRADUAÇÃO} \\
 		\vfill
 		
-		\Huge \textbf{Relatório de Estágio Curricular na} \\
+		\Huge \textbf{Relatório de Estágio Curricular} \\
 		\vspace{0.5cm}
 		\LARGE \textit{Superintendência Administrativa, Planejamento, Orçamento, Finanças e Contabilidade - SAPOFC.} \\
 		\vfill
