--- a/Estrutura do Projeto/arquivo.tex
+++ b/Estrutura do Projeto/arquivo.tex
@@ -102,40 +102,11 @@
 
 	% 3. Suporte Teórico para a Solução de Problemas
 	\section{Suporte Teórico para a Solução de Problemas}
-	\hspace*{1,5cm}A bibliográfica utilizada – \texttt{Decreto n° 98.054, de 4 de julho de 2024}. Dispõe sobre o 
-	Monitoramento e Avaliação do Plano Plurianual (PPA) - MAPPA e a Política Estadual de 
-	Monitoramento e Avaliação de Políticas Públicas de Alagoas - PEMAPP. \texttt{Diário Oficial do 
-	Estado. Alagoas, AL, n.2353; Portaria nº 163, de 4 de maio de 2001.} Dispõe sobre normas 
-	gerais de consolidação das Contas Públicas no âmbito da União, Estados, Distrito Federal e 
-	Municípios. Diário Oficial da União. \texttt{Brasília, DF, nº163, p. 15-16. de 4 de maio de 2001.} 
-	Seção 1 – A portaria define uma classificação das despesas por categoria econômica, por grupo 
-	de natureza, por modalidade de aplicação e por elemento de despesa, cujo uso estabelece uma 
-	mesma classificação orçamentária única para receitas e despesas públicas segundo sua natureza. 
-	Além disso, a portaria esclarece como é a estrutura da natureza da despesa a ser observada na 
-	execução orçamentária. Sendo assim, elas servem para esclarecer algumas dúvidas referente a 
-	construção do relatório no que tange a estrutura da natureza da despesa. %\texttt{abntex2cite}).
+	\hspace*{1,5cm}
 	
 	% 4. conclusão
 	\section{Conclusão}
-	\hspace*{1,5cm}O ambiente de trabalho na Secretaria de Estado do Turismo – SETUR/AL, além de ser 
-	amigável e agradável, proporciona não apenas aprendizado técnico, mas também oportunidades 
-	de aprimorar e desenvolver relacionamentos profissionais. Dessa forma, a interação com os 
-	colegas de profissão está sendo satisfatória e enriquecedora. Além disso, é notável a 
-	colaboração conjunta, recíproca e coletiva pelos membros da equipe do setor SAPOFC.\\
-	\hspace*{1,5cm}Em relação entre o estágio prático e os conhecimentos teóricos adquiridos, a SETUR/AL 
-	está proporcionando uma oportunidade para aplicar os conhecimentos teóricos adquiridos em 
-	sala de aula através das disciplinas de Matemática I, Estatística e Economia do Setor Público. 
-	As atividades desenvolvidas, como a coleta de dados financeiros pelo sistema integrado de 
-	administração financeira do estado de Alagoas – SIAFE/AL – e a análise desses dados para a 
-	construção de relatórios de acompanhamento da despesa da secretaria, estão diretamente 
-	alinhados com os conceitos estudados na disciplina de Matemática I e Estatística. Por exemplo, 
-	a construção de indicadores através da estatística descritiva que incluem métodos gráficos que 
-	englobam gráficos de coluna, barra, linha e histograma de frequência, foi fundamental para 
-	compreender a evolução das principais despesas. Portanto, o estágio está sendo satisfatório, não 
-	apenas pelo aprendizado técnico que vou adquirir, mas também pelo ambiente de trabalho e 
-	pela oportunidade de estabelecer conexões com os colegas de profissão. Essa experiência está 
-	sendo fundamental para minha formação e contribuirá de maneira significativamente para 
-	minha atuação futura na área.
+	
 	
 	% 5. anexos
 	\section{Anexos}
