--- a/Estrutura do Projeto/arquivo.tex
+++ b/Estrutura do Projeto/arquivo.tex
@@ -95,7 +95,7 @@
  	aconselhamento para aprimorar as habilidades com Power BI e Excel, além de apoio na resolução de problemas encontrados durante a criação dos relatórios e painéis de indicadores das despesas.  
  	
 	Portanto, os procedimentos desenvolvidos como prática de estágio incluem: coleta e análise dos dados financeiros por meio do SIAFE/AL 
-	para obter insights por meio da elaboração de painéis; utilização do Sistema Eletrônico de Informações (SEI), quando necessário, 
+	para obter insights por meio da elaboração de painéis; utilização do Sistema Eletrônico de Informações (SEI) 
  	para buscar confirmações de NE’s, NL’s e OB’s em alguns processos, a fim de embasar os argumentos feitos no acompanhamento das ações.
  	Posto isto, faz-se necessária a apresentação do material colocado à disposição para estudo.
 
