--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -35,7 +35,7 @@
 		\LARGE \textit{Superintendência Administrativa, Planejamento, Orçamento, Finanças e Contabilidade - SAPOFC.} \\
 		\vfill
 		
-		\Large Sérgio Ricardo Vieira Torres Silva \\
+		\Large Sérgio Ricardo Vieira Torres Silvaaaa \\
 		\vspace{1.5cm}
 	\end{titlepage}
 	
