--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -78,6 +78,12 @@
 	
 	% 1. introduçao
 	\section{Introdução}
+	\hspace*{1,5cm} O estágio é realizado na Secretaria de Estado do Turismo – SETUR/AL, localizada na
+	Rua Celso Piatti, No 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria está situada
+	no interior do Centro Cultural e de Exposições Ruth Cardoso. Ademais, a estrutura da secretaria
+	se divide em: órgão colegiado, gestão finalística e gestão estratégica. Em relação a gestão
+	estratégica, o setor de Superintendência Administrativa, de Planejamento, Orçamento, Finanças
+	e Contabilidade - SAPOFC, está subordinado à Secretaria Executiva de Gestão Interna. Além disso,
 	
 	\hspace*{1,5cm}
 	
