--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -78,7 +78,7 @@
 	
 	% 1. introduçao
 	\section{Introdução}
-	\hspace*{1,5cm} O estágio é realizado na Secretaria de Estado do Turismo – SETUR/AL, localizada na
+	\hspace*{1,5cm} O estágio foi realizado na Secretaria de Estado do Turismo – SETUR/AL, localizada na
 	Rua Celso Piatti, Nº 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria está situada
 	no interior do Centro Cultural e de Exposições Ruth Cardoso. Ademais, a estrutura da secretaria
 	se divide em: órgão colegiado, gestão finalística e gestão estratégica. Em relação a gestão
