--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -97,7 +97,7 @@
 	envolvem a coleta diária de dados por meio do Sistema Integrado de Administração Financeira do Estado de Alagoas – SIAFE/AL. 
 	Esses dados são utilizados para a construção e atualização dos relatórios, por meio de painéis de indicadores criados no Excel e no Power BI, 
 	quando necessário. A construção desses relatórios, voltados ao acompanhamento dos empenhos, liquidações e 
-	pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos e pagamentos para as empresas
+	pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos, e pagamentos para as empresas
 	habilitadas em licitações, por meio de contratos e convênios, era necessária para a atualização das metas 
  	físicas e financeiras relativas às ações e aos programas do Plano Plurianual (PPA), que eram de minha competência.  
 	
