--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -87,8 +87,8 @@
 
 
 	\hspace*{1,5cm} As atividades desenvolvidas, além de auxiliar o superintendente no planejamento da secretaria e 
-	na previsão das receitas orçamentárias públicas geradas pelas atividades de locação do centro de convenções, envolvem a coleta diária de dados por meio do Sistema Integrado de Administração Financeira do Estado de Alagoas – SIAFE/AL. Esses dados são utilizados para a construção e atualização dos relatórios, por meio de painéis de indicadores criados no Excel e no Power BI, quando necessário. A construção desses relatórios, voltados ao acompanhamento dos empenhos, liquidações e pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos e pagamentos para as empresas habilitadas em licitações, por meio de contratos e convênios, era necessária para a atualização das metas físicas e financeiras relativas às ações e aos programas do Plano Plurianual (PPA), que eram de minha competência.  
-	
+	na previsão das receitas orçamentárias públicas geradas pelas atividades de locação do centro de convenções, envolvem a coleta diária de dados por meio do Sistema Integrado de Administração Financeira do Estado de Alagoas – SIAFE/AL. Esses dados são utilizados para a construção e atualização dos relatórios, por meio de painéis de indicadores criados no Excel e no Power BI, quando necessário. A construção desses relatórios, voltados ao acompanhamento dos empenhos, liquidações e pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos e pagamentos para as empresas habilitadas em licitações, por meio de contratos e convênios, era necessária para a atualização das metas físicas e financeiras relativas às ações e aos programas do Plano Plurianual (PPA), que eram de minha competência. Além disso, com a supervisão do superintendente, pude participar do planejamento e da proposta da Lei Orçamentária Anual (PLOA). Dessa forma, projetei o orçamento para o ano de 2026 e, assim, digitei a proposta de despesas tanto para o fundo do turismo como para a secretaria.
+		
 	Por outro lado, além das reuniões de acompanhamento para discutir o progresso das atividades e identificar os instrumentos 
  	adotados para acompanhamento e avaliação, também foram realizados feedbacks regulares pelo superintendente sobre o desempenho e a 
  	qualidade dos relatórios desenvolvidos. Em relação a orientação dada pelo superintendente, foram fornecidas instruções detalhadas sobre o uso do SIAFE/AL, 
