--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -78,43 +78,34 @@
 	
 	% 1. introduçao
 	\section{Introdução}
-	\hspace*{1,5cm} O estágio foi realizado na Secretaria de Estado do Turismo – SETUR/AL, localizada na
-	Rua Celso Piatti, Nº 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria está situada
-	no interior do Centro Cultural e de Exposições Ruth Cardoso. Ademais, a estrutura da secretaria
-	se divide em: órgão colegiado, gestão finalística e gestão estratégica. Em relação a gestão
-	estratégica, o setor de Superintendência Administrativa, de Planejamento, Orçamento, Finanças
-	e Contabilidade - SAPOFC, está subordinado à Secretaria Executiva de Gestão Interna. Além disso,
 	
-	\hspace*{1,5cm}
+	\hspace*{1,5cm}  O estágio foi realizado na Secretaria de Estado do Turismo SETUR/AL, locali
+	zada na Rua Celso Piatti, Nº 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria
+	está situada no interior do Centro Cultural e de Exposições Ruth Cardoso. Ademais, a es
+	trutura da secretaria se divide em: órgão colegiado, gestão nalística e gestão estratégica.
+	Em relação a gestão estratégica, o setor de Superintendência Administrativa, de Planeja
+	mento, Orçamento, Finanças e Contabilidade- SAPOFC, está subordinado à Secretaria
+	Executiva de Gestão Interna. Além disso,
 	
 	% 2. atividades desenvolvidas
 	\section{Atividades Desenvolvidas}
 	
-
-
-	\hspace*{1,5cm} As atividades desenvolvidas, além de auxiliar o superintendente no planejamento da secretaria e 
-	na previsão das receitas orçamentárias públicas geradas pelas atividades de locação do centro de convenções, 
-	envolvem a coleta diária de dados por meio do Sistema Integrado de Administração Financeira do Estado de Alagoas – SIAFE/AL. 
-	Esses dados são utilizados para a construção e atualização dos relatórios, por meio de painéis de indicadores criados no Excel e no Power BI, 
-	quando necessário. A construção desses relatórios, voltados ao acompanhamento dos empenhos, liquidações e 
-	pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos e pagamentos para as empresas
-	habilitadas em licitações, por meio de contratos e convênios, era necessária para a atualização das metas 
- 	físicas e financeiras relativas às ações e aos programas do Plano Plurianual (PPA), que eram de minha competência.  
 	
-	Por outro lado, além das reuniões de acompanhamento para discutir o progresso das atividades
-	e identificar os instrumentos adotados para acompanhamento e avaliação, também foram realizados 
-	feedbacks regulares pelo superintendente sobre o desempenho e a qualidade dos relatórios desenvolvidos. 
-	Em relação a orientação dada pelo superintendente, foram fornecidas instruções detalhadas sobre o uso do SIAFE/AL, 
-	aconselhamento para aprimorar as habilidades com Power BI e Excel, além de apoio na 
-	resolução de problemas encontrados durante a criação dos relatórios e painéis de indicadores das despesas.  
- 	
-	Portanto, os procedimentos desenvolvidos como prática de estágio incluem: 
-	coleta e análise dos dados financeiros por meio do SIAFE/AL para obter insights por 
-	meio da elaboração de painéis; utilização do Sistema Eletrônico de Informações (SEI) para 
-	buscar confirmações de NE’s, NL’s e OB’s em alguns processos, a fim de embasar os argumentos 
-	feitos no acompanhamento das ações. Posto isto, faz-se necessária a apresentação do material colocado à disposição para estudo.
-
-
+	
+	\hspace*{1,5cm} As atividades desenvolvidas, além de auxiliar o superintendente no planejamento da secretaria e 
+	na previsão das receitas orçamentárias públicas geradas pelas atividades de locação do centro de convenções, envolvem a coleta diária de dados por meio do Sistema Integrado de Administração Financeira do Estado de Alagoas – SIAFE/AL. Esses dados são utilizados para a construção e atualização dos relatórios, por meio de painéis de indicadores criados no Excel e no Power BI, quando necessário. A construção desses relatórios, voltados ao acompanhamento dos empenhos, liquidações e pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos e pagamentos para as empresas habilitadas em licitações, por meio de contratos e convênios, era necessária para a atualização das metas físicas e financeiras relativas às ações e aos programas do Plano Plurianual (PPA), que eram de minha competência. Além disso, com a supervisão do superintendente, pude participar do planejamento e da proposta da Lei Orçamentária Anual (PLOA). Dessa forma, projetei o orçamento para o ano de 2026 e, assim, digitei a proposta de receitas e despesas para as unidades orçamentárias 29032 e 29533, respectivamente.
+	
+	Por outro lado, além das reuniões de acompanhamento para discutir o progresso das atividades e identificar os instrumentos 
+	adotados para acompanhamento e avaliação, também foram realizados feedbacks regulares pelo superintendente sobre o desempenho e a 
+	qualidade dos relatórios desenvolvidos. Em relação a orientação dada pelo superintendente, foram fornecidas instruções detalhadas sobre o uso do SIAFE/AL, 
+	aconselhamento para aprimorar as habilidades com Power BI e Excel, além de apoio na resolução de problemas encontrados durante a criação dos relatórios e painéis de indicadores das despesas.  
+	
+	Portanto, os procedimentos desenvolvidos como prática de estágio incluem: coleta e análise dos dados financeiros por meio do SIAFE/AL 
+	para obter insights por meio da elaboração de painéis; utilização do Sistema Eletrônico de Informações (SEI), quando necessário, 
+	para buscar confirmações de NE’s, NL’s e OB’s em alguns processos, a fim de embasar os argumentos feitos no acompanhamento das ações.
+	Posto isto, faz-se necessária a apresentação do material colocado à disposição para estudo.
+	
+	
 	% 3. Suporte Teórico para a Solução de Problemas
 	\section{Suporte Teórico para a Solução de Problemas}
 	\hspace*{1,5cm}
