--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -42,31 +42,31 @@
 	% folha de identificação
 	\thispagestyle{empty}
 	\begin{center}
-		\textbf{UNIVERSIDADE FEDERAL DE ALAGOAS} 
-		\textbf{PRÓ-REITORIA DE GRADUAÇÃO} 
+		\textbf{UNIVERSIDADE FEDERAL DE ALAGOAS} \\
+		\textbf{PRÓ-REITORIA DE GRADUAÇÃO}\\
 		\vspace{1cm}
-		\textbf{Relatório de Estágio Curricular em} \\
-		\textit{Superintendência Administrativa de orçamento, finanças e contabilidade - SAPOFC.}
+		{Relatório de Estágio Curricular em}\\
+		{Superintendência Administrativa de orçamento, finanças e contabilidade - SAPOFC.}
 	\end{center}
 	
 	\vspace{1cm}
 	
 	\noindent \textbf{Dados do Estagiário} \\
-	Nome: \underline{\hspace{12cm}} \\
-	Registro Acadêmico: \underline{\hspace{10cm}} \\
-	Curso e Período: \underline{\hspace{10cm}} \\
+	Nome: \underline{Sérgio Ricardo Vieira Torres Silva\hspace{0,2cm}} \\
+	Registro Acadêmico: \underline{21211879\hspace{0,2cm}} \\
+	Curso e Período: \underline{Ciêcias Econômicas\hspace{0,2cm}} \\
 	
 	\vspace{0.5cm}
 	\noindent \textbf{Dados do Local de Estágio} \\
-	Empresa: \underline{\hspace{13cm}} \\
-	Supervisor: \underline{\hspace{12cm}} \\
-	Nº de registro: \underline{\hspace{10cm}} \\
+	Empresa: \underline{Secretaria de Estado do Turismo\hspace{0,2cm}} \\
+	Supervisor: \underline{Leonildo José Oliveira da Silva\hspace{0,2cm}} \\
+	Nº de registro: \underline{21-3\hspace{0,2cm}} \\
 	
 	\vspace{0.5cm}
 	\noindent \textbf{Período do Estágio} \\
-	Início: \underline{\hspace{4cm}} \quad Término: \underline{\hspace{4cm}} \\
-	Jornada de trabalho: \underline{\hspace{5cm}} horas semanais \\
-	Total de horas: \underline{\hspace{4cm}} horas em \underline{\hspace{6cm}} \\
+	Início: \underline{\hspace{0,2cm}} \quad Término:\underline{\hspace{0,2cm}} \\
+	Jornada de trabalho: \underline{30\hspace{0,2cm}} horas semanais \\
+	Total de horas: \underline{\hspace{0,2cm}} horas em \underline{\hspace{0,2cm}} \\
 	
 	\vfill
 	\begin{flushright}
@@ -79,19 +79,20 @@
 	% 1. introduçao
 	\section{Introdução}
 	
-	\hspace*{1,5cm}  O estágio foi realizado na Secretaria de Estado do Turismo SETUR/AL, locali
-	zada na Rua Celso Piatti, Nº 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria
-	está situada no interior do Centro Cultural e de Exposições Ruth Cardoso. Ademais, a es
-	trutura da secretaria se divide em: órgão colegiado, gestão nalística e gestão estratégica.
-	Em relação a gestão estratégica, o setor de Superintendência Administrativa, de Planeja
-	mento, Orçamento, Finanças e Contabilidade- SAPOFC, está subordinado à Secretaria
-	Executiva de Gestão Interna. Além disso,
+	\hspace*{1,5cm}  O estágio é realizado na Secretaria de Estado do Turismo - SETUR/AL, localizada na Rua Celso Piatti, Nº 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria está situada no interior do Centro Cultural e de Exposições Ruth Cardoso.
+	
+	A SETUR/AL atende principalmente profissionais do setor turístico e órgãos governamentais, oferecendo suporte para o desenvolvimento e a gestão do turismo em Alagoas. Dessa forma, os serviços oferecidos incluem o planejamento estratégico, alinhado entre todos os superintendentes presentes na secretaria, juntamente com a secretária de Turismo do estado. Além disso, a administração financeira, o orçamento e a contabilidade também fazem parte desses serviços prestados. Em relação aos produtos elaborados, a secretaria inclui documentos técnicos, relatórios financeiros e planos orçamentários, que contribuem para a organização e o crescimento do setor turístico do estado de Alagoas.
+	
+	A equipe do setor SAPOFC é composta por diversos profissionais, incluindo gerente executivo administrativo; assessores técnicos de aquisição, frota, patrimônio, almoxarifado e controle de consumo interno; gerente executivo de planejamento, orçamento, finanças e contabilidade; supervisora de planejamento; assessores técnicos de planejamento e orçamento; além de gerentes e assessores técnicos de tecnologia da informação e infraestrutura de TI. Cada funcionário desempenha funções específicas, como coordenação administrativa, controle financeiro, planejamento orçamentário, suporte em tecnologia e gestão de recursos materiais, podendo assim garantir o funcionamento da secretaria.
+
+	
+	A organização do espaço físico da secretaria, de acordo com o organograma da SETUR/AL, é dividida em três áreas: órgão colegiado, gestão finalística e gestão estratégica. Sendo assim, dentro da gestão estratégica, destaca-se o setor de Superintendência Administrativa, de Planejamento, Orçamento, Finanças e Contabilidade (SAPOFC), que está subordinado à secretaria Executiva de Gestão Interna. Portanto, toda essa estrutura possibilita uma organização eficiente para o desenvolvimento da atividades realizada na Secretaria de Estado do Turismo.
+
 	
 	% 2. atividades desenvolvidas
 	\section{Atividades Desenvolvidas}
 	
-	\hspace*{1,5cm} As atividades desenvolvidas, além de auxiliar o superintendente no planejamento da secretaria e 
-	na previsão das receitas orçamentárias públicas geradas pelas atividades de locação do centro de convenções, envolvem a coleta diária de dados por meio do Sistema Integrado de Administração Financeira do Estado de Alagoas – SIAFE/AL. Esses dados são utilizados para a construção e atualização dos relatórios, por meio de painéis de indicadores criados no Excel e no Power BI, quando necessário. A construção desses relatórios, voltados ao acompanhamento dos empenhos, liquidações e pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos e pagamentos para as empresas habilitadas em licitações, por meio de contratos e convênios, era necessária para a atualização das metas físicas e financeiras relativas às ações e aos programas do Plano Plurianual (PPA), que eram de minha competência. Além disso, com a supervisão do superintendente, pude participar do planejamento e da proposta da Lei Orçamentária Anual (PLOA). Dessa forma, projetei o orçamento para o ano de 2026 e, assim, digitei a proposta de receitas e despesas para as unidades orçamentárias 29032 e 29533, respectivamente.
+	\hspace*{1,5cm} As atividades desenvolvidas, além de auxiliar o superintendente no planejamento da secretaria e na previsão das receitas orçamentárias públicas geradas pelas atividades de locação do centro de convenções, envolvem a coleta diária de dados por meio do Sistema Integrado de Administração Financeira do Estado de Alagoas – SIAFE/AL. Esses dados são utilizados para a construção e atualização dos relatórios, por meio de painéis de indicadores criados no Excel e no Power BI, quando necessário. A construção desses relatórios, voltados ao acompanhamento dos empenhos, liquidações e pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos e pagamentos para as empresas habilitadas em licitações, por meio de contratos e convênios, era necessária para a atualização das metas físicas e financeiras relativas às ações e aos programas do Plano Plurianual (PPA), que eram de minha competência. Além disso, com a supervisão do superintendente, pude participar do planejamento e da proposta da Lei Orçamentária Anual (PLOA). Dessa forma, projetei o orçamento para o ano de 2026 e, assim, digitei a proposta de receitas e despesas para as unidades orçamentárias 29032 e 29533, respectivamente.
 	
 	Por outro lado, além das reuniões de acompanhamento para discutir o progresso das atividades e identificar os instrumentos 
 	adotados para acompanhamento e avaliação, também foram realizados feedbacks regulares pelo superintendente sobre o desempenho e a 
@@ -110,22 +111,30 @@
 	
 	% 4. conclusão
 	\section{Conclusão}
-	
+	\hspace*{1,5cm} 
 	
 	% 5. anexos
 	\section{Anexos}
 	
-	\begin{itemize}
-		\item Avaliação do supervisor (modelo MGE)
-		\item Termo de compromisso assinado
-	\end{itemize}
-	
+	\newpage
 	% 6. de acordo
 	\vspace{2cm}
 	\noindent \textbf{De Acordo:}
 	
-	\vspace{2cm}
-	\noindent \underline{\hspace{7cm}} \hfill \underline{\hspace{7cm}} \\
-	\textbf{Supervisor (carimbo e assinatura)} \hfill \textbf{Estagiário}
-	
-\end{document}
+	\vfill
+
+	\noindent
+	\underline{\hspace{7cm}} \hfill \underline{\hspace{7cm}} \\[0.3cm]
+
+	\begin{minipage}[t]{7cm}
+		\centering
+		\textbf{Carimbo e assinatura do\
+		Supervisor}
+	\end{minipage}
+		\hfill
+	\begin{minipage}[t]{7cm}
+		\centering
+		\textbf{Estagiário}
+	\end{minipage}
+
+	\end{document}
