--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -83,7 +83,7 @@
 	
 	A SETUR/AL atende principalmente profissionais do setor turístico e órgãos governamentais, oferecendo suporte para o desenvolvimento e a gestão do turismo em Alagoas. Dessa forma, os serviços oferecidos incluem o planejamento estratégico, alinhado entre todos os superintendentes presentes na secretaria, juntamente com a secretária de Turismo do estado. Além disso, a administração financeira, o orçamento e a contabilidade também fazem parte desses serviços prestados. Em relação aos produtos elaborados, a secretaria inclui documentos técnicos, relatórios financeiros e planos orçamentários, que contribuem para a organização e o crescimento do setor turístico do estado de Alagoas.
 	
-	A equipe do setor SAPOFC é composta por diversos profissionais, incluindo gerente executivo administrativo; assessores técnicos de aquisição, frota, patrimônio, almoxarifado e controle de consumo interno; gerente executivo de planejamento, orçamento, finanças e contabilidade; supervisora de planejamento; assessores técnicos de planejamento e orçamento; além de gerentes e assessores técnicos de tecnologia da informação e infraestrutura de TI. Cada funcionário desempenha funções específicas, como coordenação administrativa, controle financeiro, planejamento orçamentário, suporte em tecnologia e gestão de recursos materiais, podendo assim garantir o funcionamento da secretaria.
+	A equipe do setor SAPOFC é composta por diversos profissionais, incluindo gerente executivo administrativo, assessores técnicos de aquisição, frota, patrimônio, almoxarifado e controle de consumo interno; gerente executivo orçamento, finanças e contabilidade; supervisora de planejamento; assessores técnicos de planejamento e orçamento; além de gerentes e assessores técnicos de tecnologia da informação. Cada funcionário desempenha funções específicas, como coordenação administrativa, controle financeiro, planejamento orçamentário, suporte em tecnologia e gestão de recursos materiais, podendo assim garantir o funcionamento da secretaria.
 
 	
 	A organização do espaço físico da secretaria, de acordo com o organograma da SETUR/AL, é dividida em três áreas: órgão colegiado, gestão finalística e gestão estratégica. Sendo assim, dentro da gestão estratégica, destaca-se o setor de Superintendência Administrativa, de Planejamento, Orçamento, Finanças e Contabilidade (SAPOFC), que está subordinado à secretaria Executiva de Gestão Interna. Portanto, toda essa estrutura possibilita uma organização eficiente para o desenvolvimento da atividades realizada na Secretaria de Estado do Turismo.
