--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -54,6 +54,7 @@
 	\noindent \textbf{Dados do Estagiário} \\
 	Nome: \underline{Sérgio Ricardo Vieira Torres Silva\hspace{0,2cm}} \\
 	Registro Acadêmico: \underline{21211879\hspace{0,2cm}} \\
+	Matrícula: \underline{40-0\hspace{0,2cm}} \\
 	Curso e Período: \underline{Ciêcias Econômicas\hspace{0,2cm}} \\
 	
 	\vspace{0.5cm}
