--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -82,7 +82,7 @@
 	
 	\hspace*{1,5cm}  O estágio é realizado na Secretaria de Estado do Turismo - SETUR/AL, localizada na Rua Celso Piatti, Nº 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria está situada no interior do Centro Cultural e de Exposições Ruth Cardoso.
 	
-	A SETUR/AL atende principalmente profissionais do setor turístico e órgãos governamentais, oferecendo suporte para o desenvolvimento e a gestão do turismo em Alagoas. Dessa forma, os serviços oferecidos incluem o planejamento estratégico, alinhado entre todos os superintendentes presentes na secretaria, juntamente com a secretária de turismo do estado. Além disso, a administração financeira, o orçamento e a contabilidade também fazem parte desses serviços prestados. Em relação aos produtos elaborados, a secretaria inclui documentos técnicos, relatórios financeiros e planos orçamentários, que contribuem para a organização e o crescimento do setor turístico do estado de Alagoas.
+	A SETUR/AL atende principalmente profissionais do setor turístico e órgãos governamentais, oferecendo suporte para o desenvolvimento e a gestão do turismo em Alagoas. Dessa forma, os serviços oferecidos incluem o planejamento estratégico, alinhado entre todos os superintendentes presentes na secretaria, juntamente com a secretária de turismo do estado e chefe de cabinete. Além disso, a administração financeira, o orçamento e a contabilidade também fazem parte desses serviços prestados. Em relação aos produtos elaborados, a secretaria inclui documentos técnicos, relatórios financeiros e planos orçamentários, que contribuem para a organização e o crescimento do setor turístico do estado de Alagoas.
 	
 	A equipe do setor SAPOFC é composta por diversos profissionais, incluindo gerente executivo administrativo, assessores técnicos de aquisição, frota, patrimônio, almoxarifado e controle de consumo interno; gerente executivo orçamento, finanças e contabilidade; supervisora de planejamento; assessores técnicos de planejamento e orçamento; além de gerentes e assessores técnicos de tecnologia da informação. Cada funcionário desempenha funções específicas, como coordenação administrativa, controle financeiro, planejamento orçamentário, suporte em tecnologia e gestão de recursos materiais, podendo assim garantir o funcionamento da secretaria.
 
@@ -93,7 +93,7 @@
 	% 2. atividades desenvolvidas
 	\section{Atividades Desenvolvidas}
 	
-	\hspace*{1,5cm} As atividades desenvolvidas, além de auxiliar o superintendente no planejamento da secretaria e na previsão das receitas orçamentárias públicas geradas pelas atividades de locação do centro de convenções, envolvem a coleta diária de dados por meio do Sistema Integrado de Administração Financeira do Estado de Alagoas – SIAFE/AL. Esses dados são utilizados para a construção e atualização dos relatórios, por meio de painéis de indicadores criados no Excel e no Power BI, quando necessário. A construção desses relatórios, voltados ao acompanhamento dos empenhos, liquidações e pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos e pagamentos para as empresas habilitadas em licitações, por meio de contratos e convênios, era necessária para a atualização das metas físicas e financeiras relativas às ações e aos programas do Plano Plurianual (PPA), que eram de minha competência. Além disso, com a supervisão do superintendente, pude participar do planejamento e da proposta da Lei Orçamentária Anual (PLOA). Dessa forma, projetei o orçamento para o ano de 2026 e, assim, digitei a proposta de receitas e despesas para as unidades orçamentárias 29032 e 29533, respectivamente.
+	\hspace*{1,5cm} As atividades desenvolvidas, além de auxiliar o superintendente no planejamento da secretaria e na previsão das receitas orçamentárias públicas geradas pelas atividades de locação do centro de 	convenções, envolvem a coleta diária de dados por meio do Sistema Integrado de Administração Financeira do Estado de Alagoas – SIAFE/AL. Esses dados são utilizados para a construção e atualização dos relatórios, por meio de painéis de indicadores criados no Excel e no Power BI, quando necessário. A construção desses relatórios, voltados ao acompanhamento dos empenhos, liquidações e pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos e pagamentos para as empresas habilitadas em licitações, por meio de contratos e convênios, era necessária para a atualização das metas físicas e financeiras relativas às ações e aos programas do Plano Plurianual (PPA), que eram de minha competência. Além disso, com a supervisão do superintendente, pude participar do planejamento e da proposta da Lei Orçamentária Anual (PLOA). Dessa forma, projetei o orçamento para o ano de 2026 e, assim, digitei a proposta de receitas e despesas para as unidades orçamentárias 29032 e 29533, respectivamente.
 	
 	Por outro lado, além das reuniões de acompanhamento para discutir o progresso das atividades e identificar os instrumentos 
 	adotados para acompanhamento e avaliação, também foram realizados feedbacks regulares pelo superintendente sobre o desempenho e a 
