--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -80,31 +80,25 @@
 	% 1. introduçao
 	\section{Introdução}
 	
-	\hspace*{1,5cm}  O estágio é realizado na Secretaria de Estado do Turismo - SETUR/AL, localizada na Rua Celso Piatti, Nº 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria está situada no interior do Centro Cultural e de Exposições Ruth Cardoso.
+	\hspace*{1,5cm}  O estágio é realizado na Secretaria de Estado do Turismo - SETUR/AL, localizada na Rua Celso Piatti, Nº 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria está situada no interior do Centro Cultural e de Exposições Ruth Cardoso. A SETUR/AL atende principalmente profissionais do setor turístico e órgãos governamentais, oferecendo suporte para o desenvolvimento e a gestão do turismo em Alagoas. Dessa forma, os serviços oferecidos incluem o planejamento estratégico, alinhado entre todos os superintendentes presentes na secretaria, juntamente com a secretária de turismo do estado e chefe de cabinete. Além disso, a administração financeira, o orçamento e a contabilidade também fazem parte desses serviços prestados. Em relação aos produtos elaborados, a secretaria inclui documentos técnicos, relatórios financeiros e planos orçamentários, que contribuem para a organização e o crescimento do setor turístico do estado de Alagoas.
 	
-	A SETUR/AL atende principalmente profissionais do setor turístico e órgãos governamentais, oferecendo suporte para o desenvolvimento e a gestão do turismo em Alagoas. Dessa forma, os serviços oferecidos incluem o planejamento estratégico, alinhado entre todos os superintendentes presentes na secretaria, juntamente com a secretária de turismo do estado e chefe de cabinete. Além disso, a administração financeira, o orçamento e a contabilidade também fazem parte desses serviços prestados. Em relação aos produtos elaborados, a secretaria inclui documentos técnicos, relatórios financeiros e planos orçamentários, que contribuem para a organização e o crescimento do setor turístico do estado de Alagoas.
-	
-	A equipe do setor SAPOFC é composta por diversos profissionais, incluindo gerente executivo administrativo, assessores técnicos de aquisição, frota, patrimônio, almoxarifado e controle de consumo interno; gerente executivo orçamento, finanças e contabilidade; supervisora de planejamento; assessores técnicos de planejamento e orçamento; além de gerentes e assessores técnicos de tecnologia da informação. Cada funcionário desempenha funções específicas, como coordenação administrativa, controle financeiro, planejamento orçamentário, suporte em tecnologia e gestão de recursos materiais, podendo assim garantir o funcionamento da secretaria.
+	A equipe da Superintendência Administrativa de orçamento, finanças e contabilidade - SAPOFC é composta por diversos profissionais, incluindo Superintendente Administrativo e Financeiro; gerente executivo administrativo; assessores técnicos de aquisição, frota, patrimônio, almoxarifado e controle de consumo interno; gerente executivo orçamento, finanças e contabilidade; supervisora de planejamento; assessores técnicos de planejamento e orçamento; além de gerentes e assessores técnicos de tecnologia da informação. Cada funcionário desempenha funções específicas, como coordenação administrativa, controle financeiro, planejamento orçamentário, suporte em tecnologia e gestão de recursos materiais, podendo assim garantir o funcionamento da secretaria.
 
 	
-	A organização do espaço físico da secretaria, de acordo com o organograma da SETUR/AL, é dividida em três áreas: órgão colegiado, gestão finalística e gestão estratégica. Sendo assim, dentro da gestão estratégica, destaca-se o setor de Superintendência Administrativa, de Planejamento, Orçamento, Finanças e Contabilidade (SAPOFC), que está subordinado à secretaria Executiva de Gestão Interna. Portanto, toda essa estrutura possibilita uma organização eficiente para o desenvolvimento da atividades realizada na Secretaria de Estado do Turismo.
+	A organização do espaço físico da Secretaria de Estado do Turismo de Alagoas - SETUR/AL, de acordo com o organograma, é dividida em três áreas: órgão colegiado, gestão finalística e gestão estratégica. Sendo assim, dentro da gestão estratégica, destaca-se a SAPOFC, que está subordinado à secretaria Executiva de Gestão Interna. Portanto, toda essa estrutura possibilita uma organização eficiente para o desenvolvimento das atividades realizadas na Secretaria de Estado do Turismo.
 
 	
 	% 2. atividades desenvolvidas
 	\section{Atividades Desenvolvidas}
 	
-	\hspace*{1,5cm} As atividades desenvolvidas, além de auxiliar o superintendente no planejamento da secretaria e na previsão das receitas orçamentárias públicas geradas pelas atividades de locação do centro de 	convenções, envolvem a coleta diária de dados por meio do Sistema Integrado de Administração Financeira do Estado de Alagoas – SIAFE/AL. Esses dados são utilizados para a construção e atualização dos relatórios, por meio de painéis de indicadores criados no Excel e no Power BI, quando necessário. A construção desses relatórios, voltados ao acompanhamento dos empenhos, liquidações e pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos e pagamentos para as empresas habilitadas em licitações, por meio de contratos e convênios, era necessária para a atualização das metas físicas e financeiras relativas às ações e aos programas do Plano Plurianual (PPA), que eram de minha competência. Além disso, com a supervisão do superintendente, pude participar do planejamento e da proposta da Lei Orçamentária Anual (PLOA). Dessa forma, projetei o orçamento para o ano de 2026 e, assim, digitei a proposta de receitas e despesas para as unidades orçamentárias 29032 e 29533, respectivamente.
+	\hspace*{1,5cm} As atividades desenvolvidas, além de auxiliar o superintendente no planejamento da secretaria e na previsão das receitas orçamentárias públicas geradas pelas atividades de locação do centro de convenções, envolvem a coleta diária de dados por meio do Sistema Integrado de Administração Financeira do Estado de Alagoas – SIAFE/AL. Esses dados são utilizados para a construção e atualização dos relatórios, por meio de painéis de indicadores criados no Excel e no Power BI, quando necessário. A construção desses relatórios, voltados ao acompanhamento dos empenhos, liquidações e pagamentos das despesas da secretaria, como passagens, diárias, adiantamentos e pagamentos para as empresas habilitadas em licitações, por meio de contratos e convênios, era necessária para a atualização das metas físicas e financeiras relativas às ações e aos programas do Plano Plurianual (PPA), que eram de minha competência. Além disso, com a supervisão do superintendente, pude participar do planejamento e da proposta da Lei Orçamentária Anual (PLOA). Dessa forma, projetamos o orçamento para o ano de 2026 e, assim, digitamos a proposta de receitas e despesas para as unidades orçamentárias 29032 e 29533, respectivamente.
 	
-	Por outro lado, além das reuniões de acompanhamento para discutir o progresso das atividades e identificar os instrumentos 
-	adotados para acompanhamento e avaliação, também foram realizados feedbacks regulares pelo superintendente sobre o desempenho e a 
+	Por outro lado, além das reuniões de acompanhamento para discutir o progresso das atividades e identificar os instrumentos adotados para acompanhamento e avaliação, também foram realizados feedbacks regulares pelo superintendente sobre o desempenho e a 
 	qualidade dos relatórios desenvolvidos. Em relação a orientação dada pelo superintendente, foram fornecidas instruções detalhadas sobre o uso do SIAFE/AL, 
 	aconselhamento para aprimorar as habilidades com Power BI e Excel, além de apoio na resolução de problemas encontrados durante a criação dos relatórios e painéis de indicadores das despesas.  
 	
-	Portanto, os procedimentos desenvolvidos como prática de estágio incluem: coleta e análise dos dados financeiros por meio do SIAFE/AL 
-	para obter insights por meio da elaboração de painéis; utilização do Sistema Eletrônico de Informações (SEI), quando necessário, 
-	para buscar confirmações de NE’s, NL’s e OB’s em alguns processos, a fim de embasar os argumentos feitos no acompanhamento das ações.
-	Posto isto, faz-se necessária a apresentação do material colocado à disposição para estudo.
-	
+	Portanto, os procedimentos desenvolvidos como prática de estágio incluem: coleta e análise dos dados financeiros por meio do SIAFE/AL, para obter insights através da elaboração de painéis; utilização do Sistema Eletrônico de Informações (SEI), quando necessário, para buscar confirmações de Notas de Empenho (NE’s), Notas de Liquidação (NL’s) e Ordens Bancárias (OB’s) em alguns processos, a fim de embasar os argumentos feitos no acompanhamento das ações.  
+
 	
 	% 3. Suporte Teórico para a Solução de Problemas
 	\section{Suporte Teórico para a Solução de Problemas}
