--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -54,14 +54,13 @@
 	\noindent \textbf{Dados do Estagiário} \\
 	Nome: \underline{Sérgio Ricardo Vieira Torres Silva\hspace{0,2cm}} \\
 	Registro Acadêmico: \underline{21211879\hspace{0,2cm}} \\
-	Matrícula: \underline{40-0\hspace{0,2cm}} \\
 	Curso e Período: \underline{Ciêcias Econômicas\hspace{0,2cm}} \\
 	
 	\vspace{0.5cm}
 	\noindent \textbf{Dados do Local de Estágio} \\
 	Empresa: \underline{Secretaria de Estado do Turismo\hspace{0,2cm}} \\
 	Supervisor: \underline{Leonildo José Oliveira da Silva\hspace{0,2cm}} \\
-	Nº de registro: \underline{21-3\hspace{0,2cm}} \\
+	Nº de registro: \underline{\hspace{0,2cm}} \\
 	
 	\vspace{0.5cm}
 	\noindent \textbf{Período do Estágio} \\
