Introdução e desenvolvimento finalizado

--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -46,7 +46,7 @@
 		\textbf{PRÓ-REITORIA DE GRADUAÇÃO}\\
 		\vspace{1cm}
 		{Relatório de Estágio Curricular em}\\
-		{Superintendência Administrativa de orçamento, finanças e contabilidade - SAPOFC.}
+		{Superintendência Administrativa, Planejamento, Orçamento, Finanças e Contabilidade - SAPOFC.}
 	\end{center}
 	
 	\vspace{1cm}
