Introdução e desenvolvimento finalizado

--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -84,7 +84,7 @@
 	A organização do espaço físico da Secretaria de Estado do Turismo de Alagoas - SETUR/AL, de acordo com o organograma, é dividida em três áreas: órgão colegiado, gestão finalística e gestão estratégica. Sendo assim, dentro da gestão estratégica, destaca-se a SAPOFC, que está subordinado à secretaria Executiva de Gestão Interna.
 	A equipe da Superintendência Administrativa de orçamento, finanças e contabilidade - SAPOFC é composta por diversos profissionais, incluindo superintendente administrativo e financeiro; gerente executivo administrativo; assessores técnicos de aquisição, frota, patrimônio, almoxarifado e controle de consumo interno; gerente executivo orçamento, finanças e contabilidade; supervisora de planejamento; assessores técnicos de planejamento e orçamento; além de gerentes e assessores técnicos de tecnologia da informação. 
 	
-	Sendo assim, cada funcionário desempenha funções específicas, como coordenação administrativa, controle financeiro, planejamento orçamentário, suporte em tecnologia e gestão de recursos materiais, podendo assim garantir o funcionamento da secretaria. Infere-se, portanto, que toda a estrutura da Superintendência Administrativa de Orçamento, Finanças e Contabilidade possibilita uma organização eficiente dos recursos para o desenvolvimento das atividades realizadas na Secretaria de Estado do Turismo.
+	Sendo assim, cada funcionário desempenha funções específicas, como coordenação administrativa, controle financeiro, planejamento orçamentário, suporte em tecnologia e gestão de recursos materiais, podendo assim garantir o funcionamento da secretaria. Infere-se, portanto, que toda a estrutura da Superintendência Administrativa, Planejamento, Orçamento, Finanças e Contabilidade possibilita uma organização eficiente dos recursos para o desenvolvimento das atividades realizadas na Secretaria de Estado do Turismo.
 
 	
 
