--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -8,6 +8,7 @@
 \usepackage{parskip}
 \usepackage{graphicx}
 \usepackage{lipsum}
+\usepackage{hyperref}
 
 % Configurações de layout
 \geometry{
@@ -106,8 +107,10 @@
 	\section{Suporte Teórico para a Solução de Problemas}
 	\hspace*{1.5cm}A bibliografia utilizada foi essencial para o desenvolvimento do estágio. Dessa forma, o Decreto nº 98.054, 4 de julho de 2024, Dispõe sobre o Monitoramento e Avaliação do Plano Plurianual (PPA) - MAPPA e a Politica Estadual de Monitoramento e avaliação de Políticas Públicas de Alagoas - PEMAPP. Diário Oficial do Estado de Alagoas, AL, n.2353. O Decreto nº 95.161, de 16 de janeiro de 2024, dispõe sobre a Execução Orçamentária, Financeira, Patrimonial e Contábil do Estado de Alagoas. Nesse sentido, esse decreto foi fundamental para entender o processo de execução. Nele, foi possível encontrar, no capítulo II, a classificação dos instrumentos para registro orçamentário, contábil, financeiro, patrimonial e de controle dos atos. A portaria nº 163, de 4 de maio de 2001, dispõe sobre normas gerais de consolidação das contas públicas no âmbito da União, Estados, Distrito Federal e Municípios, sendo necessária para entender a classificação e estrutura da despesa, segundo a sua natureza. Ela define uma classificação das despesas por categorias econômicas, por grupo de natureza, por modalidade de aplicação e por elemento de despesa, cujo uso estabelece uma mesma classificação orçamentária única para receitas e despesas públicas, segundo sua natureza. Além disso, a portaria esclarece como é a estrutura da natureza da despesa a ser observada na execução orçamentária
 	
-	Para o monitoramento do Plano Plurianual, foi utilizado o manual de julho de 2024, disponibilizado pela Gerência de Gestão e Monitoramento do PPA, que trouxe orientações para a inclusão de ações no módulo de acompanhamento do SIAFE/AL. Assim, foi possível monitorar as ações do PPA no SIAFE/AL.
+	Para o monitoramento do Plano Plurianual, foi utilizado o manual de julho de 2024, disponibilizado pela Gerência de Gestão e Monitoramento do PPA, que trouxe orientações para a inclusão de ações no módulo de acompanhamento do SIAFE/AL. Assim, foi possível monitorar as ações do PPA no SIAFE/AL. Além disso, para entender e digitar a proposta da Lei Orçamentária Anual (LOA), foi disponibilizado, pela Superintendência de Orçamento Público, o manual de elaboração da lei orçamentária anual, com todas as diretrizes e esclarecimentos sobre a categoria econômica da natureza da despesa. O manual aborda os artigos 12 e 13 da Lei nº 4.320, de 1964, onde é possível entender a classificação da despesa por categoria econômica e elementos.
 	
+	Portanto, sem o apoio da Secretaria de Orçamento Público e da Gerência de Gestão e Monitoramento do PPA, não seria possível auxiliar o superintendente com o monitoramento do Plano Plurianual e a digitação da Lei Orçamentária Anual.
+	 
 	% 4. conclusão
 	\section{Conclusão}
 	\hspace*{1,5cm} 
