--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -110,7 +110,7 @@
 	Para o monitoramento do Plano Plurianual, foi utilizado o manual de julho de 2024, disponibilizado pela Gerência de Gestão e Monitoramento do PPA, que trouxe orientações para a inclusão de ações no módulo de acompanhamento do SIAFE/AL. Assim, foi possível monitorar as ações do PPA no SIAFE/AL. Além disso, para entender e digitar a proposta da Lei Orçamentária Anual (LOA), foi disponibilizado, pela Superintendência de Orçamento Público, o manual de elaboração da lei orçamentária anual, com todas as diretrizes e esclarecimentos sobre a categoria econômica da natureza da despesa. O manual aborda os artigos 12 e 13 da Lei nº 4.320, de 1964, onde é possível entender a classificação da despesa por categoria econômica e elementos.
 	
 	Portanto, sem o apoio da Secretaria de Orçamento Público e da Gerência de Gestão e Monitoramento do PPA, não seria possível auxiliar o superintendente com o monitoramento do Plano Plurianual e a digitação da Lei Orçamentária Anual.
-	 
+
 	% 4. conclusão
 	\section{Conclusão}
 	\hspace*{1,5cm} 
@@ -118,7 +118,7 @@
 	
 	As atividades desenvolvidas, como a coleta de dados financeiros pelo Sistema Integrado de Administração Financeira do Estado de Alagoas - SIAFE/AL e a análise deles para a construção de relatórios de acompanhamento da despesa da secretaria, estão diretamente alinhadas com os conceitos estudados nas disciplinas de Matemática e Estatística. Por exemplo, a construção de indicadores por meio da estatística descritiva, que inclui métodos gráficos como gráficos de coluna, barras, linha e histograma de frequência, foi fundamental para compreender a evolução das principais despesas. 
 	
-	Portanto, o estágio foi satisfatório, não apenas pelo aprendizado técnico que adquiri, mas também pelo ambiente de trabalho e pela oportunidade de estabelecer conexões com os colegas de profissão. Essa experiência foi fundamental para a minha formação e contribuiu de maneira significativa para a minha carreira profissional.
+	Portanto, o estágio foi satisfatório. Essa experiência foi fundamental para a minha formação e contribuiu de maneira significativa para a minha carreira profissional.
 
 	
 
