--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -80,7 +80,7 @@
 	% 1. introduçao
 	\section{Introdução}
 	
-	\hspace*{1.5cm}O estágio é realizado na Secretaria de Estado do Turismo - SETUR/AL, localizada na Rua Celso Piatti, Nº 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria está situada no interior do Centro Cultural e de Exposições Ruth Cardoso. A SETUR/AL atende principalmente profissionais do setor turístico e órgãos governamentais, oferecendo suporte para o desenvolvimento e a gestão do turismo em Alagoas. Dessa forma, os serviços oferecidos incluem o planejamento estratégico, alinhado entre todos os superintendentes presentes na secretaria, juntamente com a secretária de turismo do estado e chefe de cabinete. Além disso, a administração financeira, o orçamento e a contabilidade também fazem parte desses serviços prestados. Em relação aos produtos elaborados, a secretaria inclui documentos técnicos, relatórios financeiros e planos orçamentários, que contribuem para a organização e o crescimento do setor turístico do estado de Alagoas.
+	\hspace*{1.5cm}O estágio é realizado na Secretaria de Estado do Turismo de Alagoas (SETUR/AL), localizada na Rua Celso Piatti, Nº 280-372, Jaraguá, Maceió/AL, CEP 57022-210. A secretaria está situada no interior do Centro Cultural e de Exposições Ruth Cardoso. A SETUR/AL atende principalmente profissionais do setor turístico e órgãos governamentais, oferecendo suporte para o desenvolvimento e a gestão do turismo em Alagoas. Dessa forma, os serviços oferecidos incluem o planejamento estratégico, alinhado entre todos os superintendentes presentes na secretaria, juntamente com a secretária de turismo do estado e chefe de cabinete. Além disso, a administração financeira, o orçamento e a contabilidade também fazem parte desses serviços prestados. Em relação aos produtos elaborados, a secretaria inclui documentos técnicos, relatórios financeiros e planos orçamentários, que contribuem para a organização e o crescimento do setor turístico do estado de Alagoas.
 	
 	A organização do espaço físico da Secretaria de Estado do Turismo de Alagoas - SETUR/AL, de acordo com o organograma, é dividida em três áreas: órgão colegiado, gestão finalística e gestão estratégica. Sendo assim, dentro da gestão estratégica, destaca-se a SAPOFC, que está subordinado à secretaria Executiva de Gestão Interna.
 	A equipe da Superintendência Administrativa de orçamento, finanças e contabilidade - SAPOFC é composta por diversos profissionais, incluindo superintendente administrativo e financeiro; gerente executivo administrativo; assessores técnicos de aquisição, frota, patrimônio, almoxarifado e controle de consumo interno; gerente executivo orçamento, finanças e contabilidade; supervisora de planejamento; assessores técnicos de planejamento e orçamento; além de gerentes e assessores técnicos de tecnologia da informação. 
