--- a/Arquivos/arquivo.tex
+++ b/Arquivos/arquivo.tex
@@ -116,9 +116,7 @@
 	\hspace*{1,5cm} 
 	O ambiente de trabalho na Secretaria de Estado do Turismo - SETUR/AL, além de ser amigável e agradável, proporciona não apenas aprendizado técnico, mas também oportunidades de aprimorar e desenvolver relacionamento profissionais. Dessa forma, a interação com os colegas de profissão está sendo satisfatória e enriquecedora. Além disso, é notável a colaboração conjunta, recíproca e coletiva pelos membros da equipe do setor SAPOFC. Em relação à conexão entre o estágio prático e os conhecimentos teóricos adquiridos, a SETUR/AL proporcionou várias oportunidade de aplicar os conhecimentos obtidos em sala de aula, especialmente nas disciplinas quantitativas e  Economia do Setor Público. 
 	
-	As atividades desenvolvidas, como a coleta de dados financeiros pelo Sistema Integrado de Administração Financeira do Estado de Alagoas - SIAFE/AL e a análise deles para a construção de relatórios de acompanhamento da despesa da secretaria, estão diretamente alinhadas com os conceitos estudados nas disciplinas de Matemática e Estatística. Por exemplo, a construção de indicadores por meio da estatística descritiva, que inclui métodos gráficos como gráficos de coluna, barras, linha e histograma de frequência, foi fundamental para compreender a evolução das principais despesas. 
-	
-	Portanto, o estágio foi satisfatório. Essa experiência foi fundamental para a minha formação e contribuiu de maneira significativa para a minha carreira profissional.
+	As atividades desenvolvidas, como a coleta de dados financeiros pelo Sistema Integrado de Administração Financeira do Estado de Alagoas - SIAFE/AL e a análise deles para a construção de relatórios de acompanhamento da despesa da secretaria, estão diretamente alinhadas com os conceitos estudados nas disciplinas de Matemática e Estatística. Por exemplo, a construção de indicadores por meio da estatística descritiva, que inclui métodos gráficos como gráficos de coluna, barras, linha e histograma de frequência, foi fundamental para compreender a evolução das principais despesas. Portanto, o estágio foi satisfatório. Essa experiência foi fundamental para a minha formação e contribuiu de maneira significativa para a minha carreira profissional.
 
 	
 
